# taxila

./: .gitignore  Cargo.toml  README.md
amf/: Cargo.toml  README.md  build.rs
amf/specs/: ngap.asn
amf/src/: lib.rs  structs.rs
amf/src/amf/: initiating_msg.rs  mod.rs  ngsetup.rs  structs.rs  successful_outcome.rs  unsuccessful_outcome.rs
amf/src/config/: mod.rs
amf/src/messages/: mod.rs
amf/src/ngap/: initiating_msg.rs  messages.rs  mod.rs  ngap_manager.rs  ngsetup.rs  ran_connection.rs  structs.rs  successful_outcome.rs  unsuccessful_outcome.rs
configs/: amf.yaml
nas/: Cargo.toml  LICENSE-Apache2  README.md
nas/src/: lib.rs
nas/src/messages/: headers.rs  mm.rs  mod.rs  registration_request.rs
nas/src/messages/headers/: mm.rs  sm.rs
nas/src/messages/ies/: mod.rs  ngksi.rs
nas/src/messages/mm/: registration_request.rs
nas/src/security/: mod.rs  ts8.33401.c2.hex
netfns/: Cargo.toml  README.md
netfns/src/: lib.rs
netfns/src/amf/: mod.rs  structs.rs
netfns/src/amf/config/: mod.rs
netfns/src/amf/messages/: mod.rs
netfns/src/amf/nas/: amf_ue.rs  mod.rs  nas_manager.rs
netfns/src/amf/nas/amf_ue/: registration_procedure.rs
netfns/src/amf/ngap/: initial_ue.rs  initiating_msg.rs  mod.rs  ngap_manager.rs  ngsetup.rs  ran_connection.rs  successful_outcome.rs  unsuccessful_outcome.rs
ngap/: Cargo.toml  LICENSE-MIT  README.md  build.rs
ngap/specs/: README.md
ngap/src/: guami.rs  lib.rs  messages.rs  plmn_identity.rs  supported_ta_list.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/specs/: README.md  TS29571_CommonData.yaml
openapi/src/apis/: configuration.rs
openapi/src/models/: access_token_err.rs  access_token_req.rs  access_type.rs  access_type_rm.rs  acs_info.rs  acs_info_rm.rs  additional_qos_flow_info.rs  ambr.rs  ambr_rm.rs  apn_rate_status.rs  area.rs  area_scope.rs  arp.rs  arp_rm.rs  atom.rs  atsss_capability.rs  auth_status.rs  backup_amf_info.rs  battery_indication.rs  battery_indication_rm.rs  broadcast_delivery_status.rs  cell_global_id.rs  change_item.rs  change_type.rs  civic_address.rs  cnf.rs  cnf_unit.rs  collection_period_rmm_lte_mdt.rs  collection_period_rmm_nr_mdt.rs  complex_query.rs  core_network_type.rs  core_network_type_rm.rs  ddd_traffic_descriptor.rs  dl_data_delivery_status.rs  dl_data_delivery_status_rm.rs  dnai_change_type.rs  dnai_change_type_rm.rs  dnf.rs  dnf_unit.rs  dynamic5_qi.rs  (+239 more)
sbi/: Cargo.toml  README.md
sbi/specs/: TS29503_Nudm_UEAU.yaml  TS29509_Nausf_UEAuthentication.yaml  TS29510_Nnrf_NFManagement.yaml  TS29571_CommonData.yaml
sbi/src/: anyof_handlers.rs  generator.rs  lib.rs  schema.rs  utils.rs
sbi/src/models/: access_token_err.rs  access_token_req.rs  auth_result.rs  auth_type.rs  authentication_info.rs  av5g_aka.rs  confirmation_data.rs  confirmation_data_response.rs  deregistration_info.rs  eap_auth_method_200_response.rs  eap_session.rs  invalid_param.rs  link.rs  links_value_schema.rs  mod.rs  nf_type.rs  plmn_id.rs  plmn_id_nid.rs  pro_se_auth_data.rs  pro_se_authentication_ctx.rs  pro_se_authentication_info.rs  pro_se_authentication_result.rs  pro_se_eap_session.rs  problem_details.rs  redirect_response.rs  resynchronization_info.rs  rg_auth_ctx.rs  rg_authentication_info.rs  server_addressing_info.rs  snssai.rs  trace_data.rs  trace_depth.rs  ue_authentication_ctx.rs  ue_authentication_ctx_5g_auth_data.rs
sbi/src/schema/: anyof.rs  arrays.rs  boolean.rs  nums_ints.rs  objects.rs  oneof.rs  strings.rs
security/: Cargo.toml
security/src/: aes_internal.rs  kdf.rs  lib.rs
