[package]
name = "taxila-amf"
version = "0.0.1"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
description = "5G Access and Moblility Management Function implementation in Rust."
keywords = ["5g", "amf"]
repository = "https://github.com/gabhijit/taxila.git"
readme = "README.md"

[build-dependencies]
asn1-compiler = "0.5"

[dependencies]
asn1-codecs = "0.5"
asn1_codecs_derive = "0.5"
serde = "1.0"
serde_yaml = "0.9"
bitvec = { version = "1.0", features = ["serde"] }
log = "0.4"
sctp-rs = { version = "0.1" }
tokio = { version = "1.0", features = ["rt", "sync"] }
clap = { version = "4.0", features = [ "derive", "env"] }
env_logger = { version = "0.9" }
