[package]
name = "nas"
version = "0.0.1"
edition = "2021"
description = "Implementation of 5G NAS Messages in Rust (3GPP 24.501 R17)."
license = "Apache-2-or-MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
security-3gpp = { path = "../security" }
