[package]
name = "netfns-5g"
version = "0.0.1"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
description = "5G Access and Moblility Management Function (AMF) implementation in Rust."
keywords = ["5g", "core"]
repository = "https://github.com/gabhijit/taxila.git"
readme = "README.md"

[dependencies]
asn1-codecs = "0.5"
ngap = { version = "0.0.1", path = "../ngap" }
datatypes_sbi = { version = "0.0.1", path="../openapi" , package = "common-datatypes-sbi-5g" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
sctp-rs = { version = "0.2" }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time", "signal"] }
futures = { version = "0.3" }
clap = { version = "4.0", features = [ "derive", "env"] }
env_logger = { version = "0.9" }
