[package]
name = "ngap"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
asn1-compiler = "0.5"

[dependencies]
asn1-codecs = "0.5"
asn1_codecs_derive = "0.5"
bitvec = { version = "1.0", features = ["serde"] }
serde = "1.0"
log = "0.4"
