[package]
name = "ngap"
version = "0.0.1"
edition = "2021"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
description = "NG Application Protocol Structures and Utilities (3GPP: 38.413 - Release 17)"
keywords = ["ngap", "5g"]
repository = "https://github.com/gabhijit/taxila.git"
license = "Apache-2.0 OR MIT"
readme = "README.md"
include = ["src/**/*.rs", "README.md", "Cargo.toml", "LICENSE-MIT", "LICENSE-Apache2"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
asn1-compiler = "0.5.5"

[dependencies]
asn1-codecs = "0.5"
asn1_codecs_derive = "0.5"
bitvec = { version = "1.0", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
log = "0.4"
