[package]
name = "common-datatypes-sbi-5g"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors", "Taxila Contributors"]
description = "Common Data Types for Service Based Interfaces. © 2022, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC). All rights reserved. Generated using version 1.4.1 of the specs."
# Override this license by providing a License Object in the OpenAPI.
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
